--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AflredDesktop.jar
+dist.jar=${dist.dir}/AlfredDesktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/AflredDesktop
+dist.jlink.output=${dist.jlink.dir}/AlfredDesktop
 excludes=
 includes=**
 jar.compress=false
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=AflredDesktop
+jlink.launcher.name=AlfredDesktop
 main.class=view.FormEntrar
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
